# GameCap

./: CMakeLists.txt  README.md  translations.qrc.in  version.h.in
docs/: wireframe.ep
src/: application.cpp  application.h  basepage.cpp  basepage.h  endpage.cpp  endpage.h  ethnodatainfopage.cpp  ethnodatainfopage.h  ethnodatapage.cpp  ethnodatapage.h  etnodatapage.cpp  etnodatapage.h  fundatainfopage.cpp  fundatainfopage.h  fundatapage.cpp  fundatapage.h  game.cpp  game.h  gamecogs.cpp  gamecogs.h  gamecontrol.cpp  gamecontrol.h  gameinfopage.cpp  gameinfopage.h  gamekravenmanor.cpp  gamekravenmanor.h  gamemelterman.cpp  gamemelterman.h  gamepingus.cpp  gamepingus.h  gameplaydata.cpp  gameplaydata.h  gameplayer.cpp  gameplayer.h  gameplaypage.cpp  gameplaypage.h  gamereviewpage.cpp  gamereviewpage.h  gameslender.cpp  gameslender.h  (+30 more)
src/configuration/: configuration.ini
src/resources/: logo.xcf  resources.qrc  stylesheet.css
src/translations/: CMakeLists.txt  pt-br.ts  pt_br.ts  translations.qrc.in
